# SQL_agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_GUIDELINES.md  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agents/: agent_loop.py  db_agent.py  interviewer.py  orchestrator.py  reviewer.py  schema_chat.py  tool_registry.py
alembic/: env.py
app/: config.py  main.py
docs/: api_spec.yaml  architecture.md  architecture_completeness_review.md  db_schema.md  deployment.md  deployment_guide.md  go_live_checklist.md  operations_runbook.md  ops_runbook.md  permission_matrix.md  platform_design_spec.md  project_charter.md  requirements_spec.md  security_design.md  system_architecture.md  test_cases.md  troubleshooting.md  ui_components.md  user_stories.md  v2_rebuild_plan.md  workflow_diagrams.md
models/: schema.py  session.py
prompts/: agent_loop.txt  db_agent.txt  interviewer.txt  reviewer.txt  schema_chat.txt  writers.txt
scripts/: create_user.py  install_offline.ps1  pack_offline.ps1  verify_deploy.ps1
sql_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: base.html  chat.html  confirm.html  db_agent.html  docs.html  index.html  review.html  settings.html
tests/: test_agent_loop.py  test_api.py  test_app_errors.py  test_change_requests.py  test_client.py  test_convention_checker.py  test_db_manager.py  test_ddl_executor.py  test_ddl_parser.py  test_ddl_validator.py  test_diagram_writer.py  test_ensure_schema.py  test_export_writers.py  test_file_writer.py  test_healthz.py  (+18 more)
(+315 files in other folders)
