[project]
name = "sql-agent"
version = "2.0.0a0"
description = "SQL Agent v2 — AI 驅動的資料庫建檔管理平台"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "cryptography>=42",
    "fastapi>=0.111",
    "greenlet>=3",
    "httpx>=0.27",
    "jinja2>=3.1",
    "openai>=1.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyjwt>=2.8",
    "sqlalchemy[asyncio]>=2.0.30",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]
postgres = [
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
# 非 .py 資產：wheel／非 editable 安裝時必須顯式宣告，否則會被剔除
# （Dockerfile 另有 COPY app 作雙保險，見 Dockerfile 註解）
app = [
    "web/templates/*.html",
    "web/static/css/*",
    "web/static/js/*",
    "web/static/js/lib/*",
    "llm/prompts/*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
